--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,40 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+
+    ext {
+        kotlin_version = "1.5.30"
+        moshi_version = "1.12.0"
+        coil_version = "1.2.2"
+        okk_http_version = "4.9.1"
+        paging_version = "3.0.1"
+        coroutine_version = "1.5.1"
+        retrofit_version = "2.9.0"
+        room_version = "2.3.0"
+        nav_version = "2.3.5"
+        intuit_version = "1.0.6"
+        hilt_version = "2.37"
+        lifecycle_version = "2.4.0"
+        datastore_version = "1.0.0"
+        chrome_custom_tab_version = "1.3.0"
+        lottie_version = "3.7.0"
+        facebook_shimmer = "0.5.0"
+        dot_indicator = "1.2.1"
+    }
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
+        // Dagger-Hilt
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
